--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  flutter_sound: ^8.4.2
+  geolocator: ^8.0.0
+  assets_audio_player: ^3.0.3+6
+  permission_handler: ^8.3.0
+  app_settings: ^4.1.1
+  path_provider: ^2.0.8
+  audioplayers: ^0.20.1
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_launcher_icons: 0.9.2
