--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,6 +4,10 @@ platform :ios, '13.0'
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
+pod 'Firebase/Analytics'
+pod 'Firebase/Auth'
+pod 'Firebase/Firestore'
+
 project 'Runner', {
   'Debug' => :debug,
   'Profile' => :release,
