--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.07.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -55,6 +55,7 @@ dependencies:
   path_provider: ^2.0.8
   audioplayers: ^0.20.1
   http: ^0.13.4
+  cloud_firestore: ^3.1.1
 
 dev_dependencies:
   flutter_launcher_icons: 0.9.2
