--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   built_collection: 5.1.1
   built_value: 8.1.3
   cached_network_image: 3.1.0+1
-  cloud_firestore: 2.5.4
+  # cloud_firestore: 2.5.4
   easy_debounce: 2.0.1
   firebase_auth: 3.2.0
   firebase_core: 1.10.0
